fix scrollbar styling and eliminate react warning

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
 @import './assets/sass/main.scss';
 
+#InshaAllah-one-day-I-will-work-at-google {
+  height: 100%;
+}
+
 h2 {
   @include respond(df, md) {
     font-size: 1.5rem;
@@ -77,6 +81,25 @@ li ul li {
   padding-bottom: 0.1em;
 }
 
-#iamassumingyouareadevelopertoo {
-  height: 100%;
+// Scrollbar
+
+/* width */
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ff00001f;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
